fixed navbar dark mode

--- a/about.css
+++ b/about.css
@@ -74,7 +74,7 @@ h1 {
     width: 45%;
     padding: 10px 30px;
     border-radius: 15px;
-    background: #00ff7b;
+    background: #cd92ff;
     box-shadow: 0 20px 25px -15px rgba(0, 0, 0, 0.3);
      /* Center the text inside the card */
     text-align: justify;
@@ -262,12 +262,12 @@ blockquote {
 
 @keyframes fall {
     0% {
-        background-color: #00ff05;
+        background-color: #7e5fe6;
         transform: translateY(-100px);
         opacity: 0;
     }
     100% {
-        background-color: #00ff05;
+        background-color: #7e5fe6;
         transform: translateY(100vh);
         opacity: 1;
     }
